# SamplerEditorLibrarian

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  pkg-angular.json  pkg-react.json  tsconfig.json  ui-type-angular  ui-type-react
.github/workflows/: node.js.yml
src/: app.module.ts  lib.rs  main.ts
src/mappers/: sampler-chorus-effect-mapper.ts  sampler-delay-effect-mapper.ts  sampler-echo-effect-mapper.ts  sampler-effect-mapper-factory.ts  sampler-effect-mapper.ts  sampler-key-group-mapper.ts  sampler-mapper.spec.ts  sampler-mapper.ts  sampler-pitch-shift-effect-mapper.ts  sampler-program-mapper.ts  sampler-reverb-mapper.ts  sampler-sample-mapper.ts
src/midi/: midi.controller.ts  midi.module.ts  midi.service.ts  sampler.midi.service.ts  sampler.simulator.midi.service.ts
